--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
     <header>
         <a href="#" class="logo-link">
-            <img src="NRF.JPG" alt="NRF 한국연구재단 로고" class="logo-img">
+            <img src="NRF.jpg" alt="NRF 한국연구재단 로고" class="logo-img">
         </a>
     </header>
 
@@ -246,4 +246,5 @@
     </footer>
 
 </body>
+
 </html>
